# rovi2

./: .gitignore  CMakeLists.txt  LICENSE  package.xml
Roadmap/: test1.txt  test2.txt  test3.txt  test5.txt
WorkStation_3/: WC3_Scene.wc (copy).xml  WC3_Scene.wc.xml  WC3_Scene.wc.xml_generation
WorkStation_3/Geometry/: Red_ball.stl  large_gripper.stl
WorkStation_3/WSG50/: WSG50.wc.xml
WorkStation_astar/: CollisionSetup.xml  WC3_Scene.wc.xml
WorkStation_astar/UR/: Device.xml
WorkStation_astar/WSG50/: WSG50.wc.xml
include/: Application.hpp  Astar.hpp  ColorDetector.hpp  Roadmap.hpp  RobotNode.h  Stereopsis.hpp  StudioPlugin.hpp  vision_test.hpp
launch/: ball_locator_3d_eye_hand_logging.launch  caros_universalrobot_param.xml  image_converter.launch  robot_node.launch  vision.launch  vision_secondary.launch
msg/: State.msg  path.msg  velocityXYZ.msg
src/: Application.cpp  Application_test.cpp  Astar.cpp  ColorDetector.cpp  Roadmap.cpp  RobotNode.cpp  Stereopsis.cpp  StudioPlugin.cpp  StudioPlugin.ui  ball_locator_3d.cpp  ball_locator_3d_eye_hand_logging.cpp  camera3D.cpp  image_converter.cpp  node_main.cpp  vision_test.cpp  vision_test_leth.cpp  vision_test_move_robot.cpp  vision_test_node.cpp
srv/: Conf.srv  MovePtp.srv  Movexyz.srv  Plan.srv
